Icon wrap positioning fix

--- a/main/assets/css/base/_icons.scss
+++ b/main/assets/css/base/_icons.scss
@@ -100,6 +100,7 @@
 }
 
 .check--wrap {
+	top: calc(50% - var(--text-lg)/2);
 	margin-left: auto;
 	border-radius: 50%;
 	background-color: var(--color-inclusive);
